[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=6]

[node name="Main" type="Node2D" groups=[
"main",
]]
script = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 766.493, 149.67 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 525, 425 )
[connection signal="hit" from="Player" to="." method="gameOver"]
[connection signal="point" from="Player" to="." method="scorePoint"]
[connection signal="startGame" from="HUD" to="." method="startGame"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
